mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 
     <main id="seccion">
 
+<div class="greeting">probando</div>
+
         <section class="inicio">
           <img src="">
             <div class="acerca-de-mi">
                 <h1> <b> Conoce a</b><br>Pixel Fusion Studio</br></h1>
-                <p class="parrafo1">¡Bienvenido a mi página! Aquí, aprenderás más sobre mí.</p>
-                <p class="parrafo2">Me llamo Andres, nací en Bogotá y vivo en Suba. Me gusta el helado y salir a pasear en días de sol. Me encantaría aprender a programar para poder ayudar a las personas a mostrar lo que hacen.</p>
+                <p class="parrafo1"><b>¡Bienvenido a la Era Digital de Oportunidades!</b> <br>Descubre cómo nuestra pasión por el marketing y la creatividad puede impulsar tu presencia en línea.</br> ¡Explora, Conecta, Triunfa!</p>
+                <p class="parrafo2">Te sumergirás en un viaje digital donde el marketing se encuentra con la creatividad. Desde estrategias impactantes hasta diseño innovador, te ofrecemos soluciones personalizadas que elevan tu presencia en línea. Prepárate para descubrir un mundo donde tu marca cobra vida y se destaca en el vasto paisaje digital.</p>
             </div>
             <div class="acerca-imagenes">
                 <img src="Img/imagen.jpg" alt="imagen personal">
