mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <script 
-        src="https://kit.fontawesome.com/1be6d1b930.js" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/1be6d1b930.js" crossorigin="anonymous">
     </script>
     <link rel="shortcut icon" href="Img/pixel.JPG">
     <script src="script.js"></script>
 </head>
-<body>
+<body class="img-fondo">
+
    <div class "container">
     <header class="encabezado">
       <a href="index.html"> <img src="Img/pixel.JPG" class="logo"></a>
@@ -38,16 +38,29 @@
 
     <main id="seccion">
 
-        <section class="inicio">
+        <section id="inicio">
           <img src="">
             <div class="acerca-de-mi">
                 <h1> <b> Conoce a</b><br>Pixel Fusion Studio</br></h1>
                 <p class="parrafo1"><b>¡Bienvenido a la Era Digital de Oportunidades!</b> <br>Descubre cómo nuestra pasión por el marketing y la creatividad puede impulsar tu presencia en línea.</br> ¡Explora, Conecta, Triunfa!</p>
                 <p class="parrafo2">Te sumergirás en un viaje digital donde el marketing se encuentra con la creatividad. Desde estrategias impactantes hasta diseño innovador, te ofrecemos soluciones personalizadas que elevan tu presencia en línea. Prepárate para descubrir un mundo donde tu marca cobra vida y se destaca en el vasto paisaje digital.</p>
-            </div>
+            <a href="#nosotros" class="boton boton-azul"> Ver más</a>
+              </div>
             <div class="acerca-imagenes">
-                <img src="Img/imagen.jpg" alt="imagen personal">
+                <img src="Img/market.jpg" alt="imagen market">
             </section>
+
+
+        <section id="nosotros" class="seccion">
+          <div class="container">
+          <p>Somos más que un equipo; somos arquitectos digitales apasionados por dar vida a tus ideas. Con expertise en marketing digital y diseño creativo, fusionamos estrategias innovadoras con visión artística. Nuestro compromiso es impulsar tu presencia en línea, creando conexiones memorables en el vasto mundo digital. En cada proyecto, buscamos trascender las expectativas y convertir visiones en realidades digitales impactantes. ¡Conócenos y descubre cómo hacemos que tu historia destaque en la Era Digital!</p>
+          <div class="bloque.img cuadro-perfecto"> <img src="Img/futuro1.jpg"></div>
+          </div>
+        </section>
+
+        <section id="servicios" class="seccion">
+          
+        </section>
             <footer class="form-header">
                 <h1>Contacto</h1>
       <p><em>¡Esperamos tu consulta!</em></p>
