mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
           </div>
 
-        </section>
+        </section id="contactanos">
             <footer class="form-header">
                 <h1>Contacto</h1>
       <p><em>¡Esperamos tu consulta!</em></p>
@@ -220,6 +220,17 @@
           <p class="alertas" id="alertas"></p>
         </form>
 
+        <div class="contact-container">
+          <div id="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1943507608808!2d-74.0876227902477!3d4.736271195218997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f84e4d02068b1%3A0x9be255429c7b9d36!2sCasa%20Comercial%20El%20Portal%20de%20Suba!5e0!3m2!1ses-419!2sco!4v1700018863076!5m2!1ses-419!2sco" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
+          <div id="contact-info">
+            <p><strong>Dirección:</strong> Calle X, Ciudad Y</p>
+            <p><strong>Teléfono:</strong> +123456789</p>
+            <p><strong>Email:</strong> info@mail.com</p>
+          </div>
+        </div>
                 <h3>Redes sociales</h3>
                 <ul>
                     <li><a href="#facebook">Facebook</a></li>
